--- a/airline_analysis.ipynb
+++ b/airline_analysis.ipynb
@@ -10,6 +10,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6f6cde94",
+   "metadata": {},
+   "source": [
+    "### Github Repository \n",
+    "\n",
+    "Github URL: https://github.com/rethishaG/Airline-Customer-Satisfaction-Analysis/tree/main\n",
+    "\n",
+    "QR Code:\n",
+    "\n",
+    "\n",
+    "Scan the QR code below to access the project repository:\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "  <img src=\"Airline_Customer_Satisfaction_GitHub_QR.png\" width=\"180\">\n",
+    "</p>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "351eeda8-bef6-499c-b55a-3ea7329e7e56",
    "metadata": {},
    "source": [
